src/test/resources/rules/fail/WhitespaceAround.java
package rules.fail;

public class WhitespaceAround {
    public void method() {
        int x= 5;
        System.out.println(x);
    }
}
